fix flex wrap on circle dashboard

--- a/app/assets/stylesheets/views/circle/_dashboard.scss
+++ b/app/assets/stylesheets/views/circle/_dashboard.scss
@@ -21,13 +21,11 @@ body.internal .circle-dashboard{
   .details {
     @include display(flex);
     @include flex-direction(row);
-    @include align-items(top);
-    @include justify-content(space-between);
     @include flex-wrap(wrap);
 
     main{
-//      @include flex(11 0 auto);
-      -ms-flex: 11 0 auto;
+      @include flex(10 1);
+      min-width: 500px;
     }
 
     aside {
